# recorditnow

./: DEPENDENCIES  INSTALL  install.sh  recorditnow.desktop  recorditnow.notifyrc
joschy-snapshot-23-02-10/: CMakeLists.txt
joschy-snapshot-23-02-10/Provider/: CMakeLists.txt
joschy-snapshot-23-02-10/Provider/Blip/: CMakeLists.txt
joschy-snapshot-23-02-10/Provider/Blip/src/: CMakeLists.txt  blipprovider.cpp  blipprovider.h  blipprovider.plugin  responseparser.cpp  responseparser.h
joschy-snapshot-23-02-10/Provider/YouTube/: CMakeLists.txt
joschy-snapshot-23-02-10/Provider/YouTube/src/: CMakeLists.txt  responseparser.cpp  responseparser.h  youtubeprovider.cpp  youtubeprovider.h  youtubeprovider.plugin
joschy-snapshot-23-02-10/QNetworkLayer/: CMakeLists.txt
joschy-snapshot-23-02-10/QNetworkLayer/src/: CMakeLists.txt  qnetworklayer.cpp  qnetworklayer.h  qnetworklayer.plugin  transferjob.cpp  transferjob.h
joschy-snapshot-23-02-10/cmake/modules/: FindJoschyCore.cmake
joschy-snapshot-23-02-10/joschycore/: CMakeLists.txt
joschy-snapshot-23-02-10/joschycore/joschycore/: CMakeLists.txt  abstractjob.cpp  abstractjob.h  abstractnetworklayer.cpp  abstractnetworklayer.h  abstractprovider.cpp  abstractprovider.h  abstractresponseparser.cpp  abstractresponseparser.h  actionreply.cpp  actionreply.h  config.cpp  config.h  joschy.cpp  joschy.h  joschy_global.h  joschy_version.h  manager.cpp  manager.h  plugin.cpp  plugin.h  plugininfo.cpp  plugininfo.h  pluginmanager.cpp  pluginmanager_p.h  postfile.cpp  postfile.h  scheduler.cpp  scheduler.h  schedulerthread.cpp  schedulerthread.h  video.cpp  video.h
src/: CMakeLists.txt  FindXFixes.cmake  application.cpp  application.h  checkicon.cpp  checkicon.h  cursorwidget.cpp  cursorwidget.h  devicesearchdialog.cpp  devicesearchdialog.h  encodermanager.cpp  encodermanager.h  keymonmanager.cpp  keymonmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  recordermanager.cpp  recordermanager.h  recorditnow.kcfg  recorditnow.kcfgc  recorditnowpluginmanager.cpp  recorditnowpluginmanager.h  recorditnowui.rc  uploadmanager.cpp  uploadmanager.h
src/config/: configdialog.cpp  configdialog.h  configpage.cpp  configpage.h  frameconfig.cpp  frameconfig.h  keyboardconfig.cpp  keyboardconfig.h  keyboardkeyiconpage.cpp  keyboardkeyiconpage.h  keyboardkeypage.cpp  keyboardkeypage.h  keyboardwizard.cpp  keyboardwizard.h  mousebutton.cpp  mousebutton.h  mouseconfig.cpp  mouseconfig.h  pluginconfig.cpp  pluginconfig.h  shortcutsconfig.cpp  shortcutsconfig.h  timelineconfig.cpp  timelineconfig.h  zoomconfig.cpp  zoomconfig.h
src/frame/: frame.cpp  frame.h  frameinfowidget.cpp  frameinfowidget.h  movewidget.cpp  movewidget.h
src/keyboard/: CMakeLists.txt  flowlayout.cpp  flowlayout.h  keyboarddock.cpp  keyboarddock.h  keyboardkey.cpp  keyboardkey.h  keywidget.cpp  keywidget.h  proxylayout.cpp  proxylayout.h
src/keyboard/themes/: CMakeLists.txt
src/keyboard/themes/default/: default.themerc
src/keymon/: CMakeLists.txt  device.cpp  device.h  devicehelper.cpp  devicehelper.h  deviceinfo.cpp  deviceinfo.h  event.cpp  event.h  helper.actions  manager.cpp  manager.h
src/libs/: CMakeLists.txt
src/libs/encoder/: CMakeLists.txt  abstractencoder.cpp  abstractencoder.h  recorditnow_encoder.desktop
src/libs/plugin/: CMakeLists.txt  recorditnowplugin.cpp  recorditnowplugin.h
src/libs/recorder/: CMakeLists.txt  abstractrecorder.cpp  abstractrecorder.h  recorditnow_recorder.desktop
src/libs/upload/: CMakeLists.txt  abstractuploader.cpp  abstractuploader.h  addaccountdialog.cpp  addaccountdialog.h  recorditnow_uploader.desktop
src/libs/upload/ui/: addaccount.ui
src/plugins/: CMakeLists.txt  Findffmpeg.cmake
src/plugins/encoder/: CMakeLists.txt  FindMencoder.cmake
src/plugins/encoder/ffmpeg/: CMakeLists.txt  ffmpegencoder.cpp  ffmpegencoder.h  ffmpegencoderconfig.cpp  ffmpegencoderconfig.h  formatdialog.cpp  formatdialog.h  recorditnow_ffmpeg.desktop  recorditnow_ffmpeg.kcfg  recorditnow_ffmpeg.kcfgc  recorditnow_ffmpeg_config.desktop
src/plugins/encoder/mencoder/: CMakeLists.txt  formatdialog.cpp  mencoderencoder.cpp  mencoderencoder.h  mencoderencoderconfig.cpp  mencoderencoderconfig.h  recorditnow_mencoder.desktop  recorditnow_mencoder.kcfg  recorditnow_mencoder.kcfgc  recorditnow_mencoder_config.desktop
src/plugins/recorder/: CMakeLists.txt
src/plugins/recorder/ffmpegrecorder/: CMakeLists.txt  ffmpegrecorder.cpp  ffmpegrecorder.h  ffmpegrecorderconfig.cpp  ffmpegrecorderconfig.h  recorditnow_ffmpegrecorder.desktop  recorditnow_ffmpegrecorder.kcfg  recorditnow_ffmpegrecorder.kcfgc  recorditnow_ffmpegrecorder_config.desktop
src/plugins/recorder/recordmydesktop/: CMakeLists.txt  recorditnow_recordmydesktop.desktop  recorditnow_recordmydesktop.kcfg  recorditnow_recordmydesktop.kcfgc  recorditnow_recordmydesktop_config.desktop  recordmydesktopconfig.cpp  recordmydesktopconfig.h  recordmydesktoprecorder.cpp  recordmydesktoprecorder.h  sounddevice.cpp  sounddevice.h  sounddevicedialog.cpp  sounddevicedialog.h
src/plugins/recorder/screenshot/: CMakeLists.txt  recorditnow_screenshot.desktop  recorditnow_screenshot.kcfg  (+6 more)
src/timeline/: timeline.cpp  timeline.h  timelinedock.cpp  timelinedock.h  timelinetopicsdialog.cpp  timelinetopicsdialog.h  topic.cpp  topic.h  topictreeitem.cpp  topictreeitem.h  topicwidget.cpp  topicwidget.h
src/ui/: devicesearchdialog.ui  frameconfig.ui  keyboardconfig.ui  keyboarddock.ui  keyboarddocktitlewidget.ui  keyboardkeyiconpage.ui  keyboardkeypage.ui  mouseconfig.ui  pluginconfig.ui  settings.ui  shortcutsconfig.ui  timeline.ui  timelineconfig.ui  timelinedocktitlewidget.ui  timelinetopics.ui  toolbarwidget.ui  zoom.ui  zoomdock.ui  zoomdocktitlewidget.ui
src/upload/: accountpage.cpp  accountpage.h  pluginpage.cpp  pluginpage.h  termspage.cpp  termspage.h  uploadpage.cpp  uploadpage.h  uploadwizard.cpp  uploadwizard.h  videopage.cpp  videopage.h
src/upload/ui/: accountpage.ui  pluginpage.ui  termspage.ui  uploadpage.ui  videopage.ui
src/zoom/: zoomdock.cpp  zoomdock.h  zoomview.cpp  zoomview.h
(+26 files in other folders)
